# shorty

backend/: Cargo.toml
backend/.sqlx/: query-126052b96468e8daa947d335de164f90d6863d7acf324c4e87e0368a85938455.json  query-14894e6aa9a3b0bb61fc40fe0104f17bc8106bcfde4c670c42401be994e0c36f.json  query-1ae8b7d2b93139fb6003bef62fc0ece8933cb321c2ca4e54187c176ad6a1abe0.json  query-32d9c61217980862c7b1e2755b4f00b99127c8ffa4305d501950fbb31239304c.json  query-58495683386ad64f7a20742d0130eabbe7ec6f3aa81b5fe5d4f4ed71112c346b.json  query-7665d4546ee05e45bbc0328179635162c0f0a70038a3c3a1b3f77d49cb5a69b6.json  query-faf5fa247c55cd95f7dcec50b6ec85c3641cfa57d32fa052e4dfb3687c517c5c.json
