[package]
name = "shorty"
version = "0.8.5"
edition = "2021"

authors = ["flamion <shorty@flamion.dev>", "FlareFlo <mail@flareflo.dev>", "Jonas Crull <dev@jonascrull.de>"]
description = "Small link shortener"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }

actix-web = "4.5.1"
actix-files = "0.6.5"
actix-cors = "0.7.0"

base64 = "0.22.0"
rand = "0.8.5"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [ "env-filter" ] }
tracing-core = "0.1.32"

serde = "1.0.198"
serde_json = "1.0.116"
toml = "0.8.12"

chrono = "0.4.38"

thiserror = "1.0.58"

lazy_static = "1.4.0"

dotenvy = "0.15.7"
konst = "0.3.9"

[dependencies.utoipa]
version = "4.2.0"
features = ["actix_extras"]

[dependencies.utoipa-swagger-ui]
version = "6.0.0"
features = ["actix-web"]

[dependencies.sqlx]
version = "0.7.4"
features = ["runtime-tokio-rustls", "chrono", "migrate", "macros", "sqlite"]

[dependencies.static-files]
version = "0.2"
optional = true

[build-dependencies.static-files]
version = "0.2"
#optional = true

[build-dependencies]
serde = "^1.0"
toml = { version = "0.8.12", features = ["indexmap"]}

[features]
default = ["integrated-frontend"]
integrated-frontend = ["static-files"]
